# postgresql

./: .gitignore  .gitmodules  README.md
Docs/: commands.txt
Docs/From_Collage/Question_Solution/: 01_Introduction_to_SQL.sql  02_Constraints_Integrity_and_Where_Clause.sql  03_Update_Delete_Sub_Query.sql  04_Build_in_Function_and_Group_by_Having_clause.sql  05_Joins_and_Creating_Views.sql
Tutorial/00_Main_Tutorial/01_Introduction/: Note.txt
Tutorial/00_Main_Tutorial/02_Installation/: Note.txt  password.txt
Tutorial/00_Main_Tutorial/04_Setup_PSQL/: Note.txt
Tutorial/00_Main_Tutorial/05_Create_Database/: Note.txt
Tutorial/00_Main_Tutorial/06_Connect_To_Database/: Note.txt
Tutorial/00_Main_Tutorial/07_Important_Command/: Note.txt
Tutorial/00_Main_Tutorial/08_Create_Table/: Note.txt
Tutorial/00_Main_Tutorial/11_Generate_1000_Rows_with_Mockaroo/: Note.txt
Tutorial/00_Main_Tutorial/12_Select_From/: Note.txt
Tutorial/00_Main_Tutorial/13_Order_By/: Note.txt
Tutorial/00_Main_Tutorial/14_Distinct/: Note.txt
Tutorial/00_Main_Tutorial/15_Where_Clause_and_AND/: Note.txt
Tutorial/00_Main_Tutorial/16_Comparison_Operators/: Note.txt
Tutorial/00_Main_Tutorial/17_Limit_Offset_and_Fetch/: Note.txt
Tutorial/00_Main_Tutorial/18_IN/: Note.txt
Tutorial/01_Node_Postgres/: .env.example  Note.txt  package.json  server.js
Tutorial/02_Django_Postgres/: .env.example  .gitignore  Note.txt  pyproject.toml
Tutorial/02_Django_Postgres/config/: settings.py
Tutorial/03_Dailo_Ecommerce_Prisma_Example/: connection.ts
Tutorial/Node-Postgres/: package.json  server.js
(+85 files in other folders)
