[tool.poetry]
name = "02_django_postgres"
version = "0.1.0"
description = ""
authors = ["Roman-Ojha <razzroman98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.6"
Django = "^4.1"
autopep8 = "^1.7.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
